[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/objects/pathway.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 8, 2, 80 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 4, 1, 40 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 5, 1, 1 )

[node name="BiggerPathway" type="StaticBody"]
collision_layer = 8
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 2 )

[node name="Goal" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -9 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Goal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -27.695 )
shape = SubResource( 3 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
